--- a/liquidwar6/src/lib/msg/Makefile.in
+++ b/liquidwar6/src/lib/msg/Makefile.in
@@ -57,10 +57,10 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
-@FULLSTATIC_FALSE@libexec_PROGRAMS = liquidwar6cli-test$(EXEEXT)
-@FULLSTATIC_FALSE@TESTS = liquidwar6cli-test$(EXEEXT)
-subdir = src/lib/cli
-DIST_COMMON = $(libcli_HEADERS) $(srcdir)/Makefile.am \
+@FULLSTATIC_FALSE@libexec_PROGRAMS = liquidwar6msg-test$(EXEEXT)
+@FULLSTATIC_FALSE@TESTS = liquidwar6msg-test$(EXEEXT)
+subdir = src/lib/msg
+DIST_COMMON = $(libmsg_HEADERS) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/gettext.m4 \
@@ -78,25 +78,18 @@ CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
-@MOD_HTTP_TRUE@am__DEPENDENCIES_1 = mod-http/libmod_http_s.la
-@ALLINONE_TRUE@am__DEPENDENCIES_2 = mod-tcp/libmod_tcp_s.la \
-@ALLINONE_TRUE@	mod-udp/libmod_udp_s.la $(am__DEPENDENCIES_1)
-libcli_la_DEPENDENCIES = $(am__DEPENDENCIES_2)
-am_libcli_la_OBJECTS = cli-api.lo cli-oob.lo cli-register.lo \
-	cli-test.lo
-libcli_la_OBJECTS = $(am_libcli_la_OBJECTS)
-am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libclidir)"
+libmsg_la_LIBADD =
+am_libmsg_la_OBJECTS = msg-oob.lo msg-test.lo
+libmsg_la_OBJECTS = $(am_libmsg_la_OBJECTS)
+am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libmsgdir)"
 PROGRAMS = $(libexec_PROGRAMS)
-am__liquidwar6cli_test_SOURCES_DIST = cli-testmain.c
-@FULLSTATIC_FALSE@am_liquidwar6cli_test_OBJECTS =  \
-@FULLSTATIC_FALSE@	cli-testmain.$(OBJEXT)
-liquidwar6cli_test_OBJECTS = $(am_liquidwar6cli_test_OBJECTS)
-@ALLINONE_FALSE@am__DEPENDENCIES_3 = ../dyn/libdyn.la
-@FULLSTATIC_FALSE@liquidwar6cli_test_DEPENDENCIES = libcli.la \
-@FULLSTATIC_FALSE@	$(am__DEPENDENCIES_3) ../msg/libmsg.la \
-@FULLSTATIC_FALSE@	../nod/libnod.la ../net/libnet.la \
-@FULLSTATIC_FALSE@	../cfg/libcfg.la ../hlp/libhlp.la \
-@FULLSTATIC_FALSE@	../glb/libglb.la ../sys/libsys.la
+am__liquidwar6msg_test_SOURCES_DIST = msg-testmain.c
+@FULLSTATIC_FALSE@am_liquidwar6msg_test_OBJECTS =  \
+@FULLSTATIC_FALSE@	msg-testmain.$(OBJEXT)
+liquidwar6msg_test_OBJECTS = $(am_liquidwar6msg_test_OBJECTS)
+@FULLSTATIC_FALSE@liquidwar6msg_test_DEPENDENCIES = libmsg.la \
+@FULLSTATIC_FALSE@	../nod/libnod.la ../glb/libglb.la \
+@FULLSTATIC_FALSE@	../sys/libsys.la
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -110,16 +103,9 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(libcli_la_SOURCES) $(liquidwar6cli_test_SOURCES)
-DIST_SOURCES = $(libcli_la_SOURCES) \
-	$(am__liquidwar6cli_test_SOURCES_DIST)
-RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
-	html-recursive info-recursive install-data-recursive \
-	install-dvi-recursive install-exec-recursive \
-	install-html-recursive install-info-recursive \
-	install-pdf-recursive install-ps-recursive install-recursive \
-	installcheck-recursive installdirs-recursive pdf-recursive \
-	ps-recursive uninstall-recursive
+SOURCES = $(libmsg_la_SOURCES) $(liquidwar6msg_test_SOURCES)
+DIST_SOURCES = $(libmsg_la_SOURCES) \
+	$(am__liquidwar6msg_test_SOURCES_DIST)
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
     $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
@@ -141,43 +127,12 @@ am__nobase_list = $(am__nobase_strip_setup); \
 am__base_list = \
   sed '$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;s/\n/ /g' | \
   sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
-HEADERS = $(libcli_HEADERS)
-RECURSIVE_CLEAN_TARGETS = mostlyclean-recursive clean-recursive	\
-  distclean-recursive maintainer-clean-recursive
-AM_RECURSIVE_TARGETS = $(RECURSIVE_TARGETS:-recursive=) \
-	$(RECURSIVE_CLEAN_TARGETS:-recursive=) tags TAGS ctags CTAGS \
-	distdir
+HEADERS = $(libmsg_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 am__tty_colors = \
 red=; grn=; lgn=; blu=; std=
-DIST_SUBDIRS = mod-tcp mod-udp mod-http
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-am__relativize = \
-  dir0=`pwd`; \
-  sed_first='s,^\([^/]*\)/.*$$,\1,'; \
-  sed_rest='s,^[^/]*/*,,'; \
-  sed_last='s,^.*/\([^/]*\)$$,\1,'; \
-  sed_butlast='s,/*[^/]*$$,,'; \
-  while test -n "$$dir1"; do \
-    first=`echo "$$dir1" | sed -e "$$sed_first"`; \
-    if test "$$first" != "."; then \
-      if test "$$first" = ".."; then \
-        dir2=`echo "$$dir0" | sed -e "$$sed_last"`/"$$dir2"; \
-        dir0=`echo "$$dir0" | sed -e "$$sed_butlast"`; \
-      else \
-        first2=`echo "$$dir2" | sed -e "$$sed_first"`; \
-        if test "$$first2" = "$$first"; then \
-          dir2=`echo "$$dir2" | sed -e "$$sed_rest"`; \
-        else \
-          dir2="../$$dir2"; \
-        fi; \
-        dir0="$$dir0"/"$$first"; \
-      fi; \
-    fi; \
-    dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
-  done; \
-  reldir="$$dir2"
 ACLOCAL = @ACLOCAL@
 ALLINONE_CFLAGS = @ALLINONE_CFLAGS@
 ALLINONE_LDFLAGS = @ALLINONE_LDFLAGS@
@@ -368,25 +323,15 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CFLAGS = @LW6_CFLAGS@ @MOD_HTTP_ENABLE_CFLAGS@
+AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
-@MOD_HTTP_FALSE@MOD_HTTP_SUBDIR = 
-@MOD_HTTP_TRUE@MOD_HTTP_SUBDIR = mod-http
-@MOD_HTTP_FALSE@MOD_HTTP_LIB_S = 
-@MOD_HTTP_TRUE@MOD_HTTP_LIB_S = mod-http/libmod_http_s.la
-@ALLINONE_FALSE@LW6DYN_LIB = ../dyn/libdyn.la 
-@ALLINONE_TRUE@LW6DYN_LIB = 
-@ALLINONE_FALSE@LW6CLI_LIB_S = 
-@ALLINONE_TRUE@LW6CLI_LIB_S = mod-tcp/libmod_tcp_s.la mod-udp/libmod_udp_s.la $(MOD_HTTP_LIB_S)
-noinst_LTLIBRARIES = libcli.la
-libcli_la_LIBADD = $(LW6CLI_LIB_S)
-libcli_la_SOURCES = cli-api.c cli-oob.c cli-register.c cli-test.c
-libclidir = $(includedir)/@PACKAGE_TARNAME@/cli
-libcli_HEADERS = cli.h
-@FULLSTATIC_FALSE@liquidwar6cli_test_SOURCES = cli-testmain.c
-@FULLSTATIC_FALSE@liquidwar6cli_test_LDADD = libcli.la $(LW6DYN_LIB) ../msg/libmsg.la ../nod/libnod.la ../net/libnet.la ../cfg/libcfg.la ../hlp/libhlp.la ../glb/libglb.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
-SUBDIRS = mod-tcp mod-udp $(MOD_HTTP_SUBDIR)
-all: all-recursive
+noinst_LTLIBRARIES = libmsg.la
+libmsg_la_SOURCES = msg-oob.c msg-test.c
+libmsgdir = $(includedir)/@PACKAGE_TARNAME@/msg
+libmsg_HEADERS = msg.h
+@FULLSTATIC_FALSE@liquidwar6msg_test_SOURCES = msg-testmain.c
+@FULLSTATIC_FALSE@liquidwar6msg_test_LDADD = libmsg.la ../nod/libnod.la ../glb/libglb.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
+all: all-am
 
 .SUFFIXES:
 .SUFFIXES: .c .lo .o .obj
@@ -399,9 +344,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu src/lib/cli/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu src/lib/msg/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu src/lib/cli/Makefile
+	  $(AUTOMAKE) --gnu src/lib/msg/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -429,8 +374,8 @@ clean-noinstLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libcli.la: $(libcli_la_OBJECTS) $(libcli_la_DEPENDENCIES) 
-	$(LINK)  $(libcli_la_OBJECTS) $(libcli_la_LIBADD) $(LIBS)
+libmsg.la: $(libmsg_la_OBJECTS) $(libmsg_la_DEPENDENCIES) 
+	$(LINK)  $(libmsg_la_OBJECTS) $(libmsg_la_LIBADD) $(LIBS)
 install-libexecPROGRAMS: $(libexec_PROGRAMS)
 	@$(NORMAL_INSTALL)
 	test -z "$(libexecdir)" || $(MKDIR_P) "$(DESTDIR)$(libexecdir)"
@@ -474,9 +419,9 @@ clean-libexecPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-liquidwar6cli-test$(EXEEXT): $(liquidwar6cli_test_OBJECTS) $(liquidwar6cli_test_DEPENDENCIES) 
-	@rm -f liquidwar6cli-test$(EXEEXT)
-	$(LINK) $(liquidwar6cli_test_OBJECTS) $(liquidwar6cli_test_LDADD) $(LIBS)
+liquidwar6msg-test$(EXEEXT): $(liquidwar6msg_test_OBJECTS) $(liquidwar6msg_test_DEPENDENCIES) 
+	@rm -f liquidwar6msg-test$(EXEEXT)
+	$(LINK) $(liquidwar6msg_test_OBJECTS) $(liquidwar6msg_test_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -484,11 +429,9 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cli-api.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cli-oob.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cli-register.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cli-test.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cli-testmain.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-oob.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-test.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-testmain.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -516,96 +459,26 @@ mostlyclean-libtool:
 
 clean-libtool:
 	-rm -rf .libs _libs
-install-libcliHEADERS: $(libcli_HEADERS)
+install-libmsgHEADERS: $(libmsg_HEADERS)
 	@$(NORMAL_INSTALL)
-	test -z "$(libclidir)" || $(MKDIR_P) "$(DESTDIR)$(libclidir)"
-	@list='$(libcli_HEADERS)'; test -n "$(libclidir)" || list=; \
+	test -z "$(libmsgdir)" || $(MKDIR_P) "$(DESTDIR)$(libmsgdir)"
+	@list='$(libmsg_HEADERS)'; test -n "$(libmsgdir)" || list=; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  echo "$$d$$p"; \
 	done | $(am__base_list) | \
 	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libclidir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libclidir)" || exit $$?; \
+	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libmsgdir)'"; \
+	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libmsgdir)" || exit $$?; \
 	done
 
-uninstall-libcliHEADERS:
+uninstall-libmsgHEADERS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(libcli_HEADERS)'; test -n "$(libclidir)" || list=; \
+	@list='$(libmsg_HEADERS)'; test -n "$(libmsgdir)" || list=; \
 	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
 	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libclidir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libclidir)" && rm -f $$files
-
-# This directory's subdirectories are mostly independent; you can cd
-# into them and run `make' without going through this Makefile.
-# To change the values of `make' variables: instead of editing Makefiles,
-# (1) if the variable is set in `config.status', edit `config.status'
-#     (which will cause the Makefiles to be regenerated when you run `make');
-# (2) otherwise, pass the desired values on the `make' command line.
-$(RECURSIVE_TARGETS):
-	@failcom='exit 1'; \
-	for f in x $$MAKEFLAGS; do \
-	  case $$f in \
-	    *=* | --[!k]*);; \
-	    *k*) failcom='fail=yes';; \
-	  esac; \
-	done; \
-	dot_seen=no; \
-	target=`echo $@ | sed s/-recursive//`; \
-	list='$(SUBDIRS)'; for subdir in $$list; do \
-	  echo "Making $$target in $$subdir"; \
-	  if test "$$subdir" = "."; then \
-	    dot_seen=yes; \
-	    local_target="$$target-am"; \
-	  else \
-	    local_target="$$target"; \
-	  fi; \
-	  ($(am__cd) $$subdir && $(MAKE) $(AM_MAKEFLAGS) $$local_target) \
-	  || eval $$failcom; \
-	done; \
-	if test "$$dot_seen" = "no"; then \
-	  $(MAKE) $(AM_MAKEFLAGS) "$$target-am" || exit 1; \
-	fi; test -z "$$fail"
-
-$(RECURSIVE_CLEAN_TARGETS):
-	@failcom='exit 1'; \
-	for f in x $$MAKEFLAGS; do \
-	  case $$f in \
-	    *=* | --[!k]*);; \
-	    *k*) failcom='fail=yes';; \
-	  esac; \
-	done; \
-	dot_seen=no; \
-	case "$@" in \
-	  distclean-* | maintainer-clean-*) list='$(DIST_SUBDIRS)' ;; \
-	  *) list='$(SUBDIRS)' ;; \
-	esac; \
-	rev=''; for subdir in $$list; do \
-	  if test "$$subdir" = "."; then :; else \
-	    rev="$$subdir $$rev"; \
-	  fi; \
-	done; \
-	rev="$$rev ."; \
-	target=`echo $@ | sed s/-recursive//`; \
-	for subdir in $$rev; do \
-	  echo "Making $$target in $$subdir"; \
-	  if test "$$subdir" = "."; then \
-	    local_target="$$target-am"; \
-	  else \
-	    local_target="$$target"; \
-	  fi; \
-	  ($(am__cd) $$subdir && $(MAKE) $(AM_MAKEFLAGS) $$local_target) \
-	  || eval $$failcom; \
-	done && test -z "$$fail"
-tags-recursive:
-	list='$(SUBDIRS)'; for subdir in $$list; do \
-	  test "$$subdir" = . || ($(am__cd) $$subdir && $(MAKE) $(AM_MAKEFLAGS) tags); \
-	done
-ctags-recursive:
-	list='$(SUBDIRS)'; for subdir in $$list; do \
-	  test "$$subdir" = . || ($(am__cd) $$subdir && $(MAKE) $(AM_MAKEFLAGS) ctags); \
-	done
+	echo " ( cd '$(DESTDIR)$(libmsgdir)' && rm -f" $$files ")"; \
+	cd "$(DESTDIR)$(libmsgdir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -617,23 +490,10 @@ ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	mkid -fID $$unique
 tags: TAGS
 
-TAGS: tags-recursive $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
+TAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
 		$(TAGS_FILES) $(LISP)
 	set x; \
 	here=`pwd`; \
-	if ($(ETAGS) --etags-include --version) >/dev/null 2>&1; then \
-	  include_option=--etags-include; \
-	  empty_fix=.; \
-	else \
-	  include_option=--include; \
-	  empty_fix=; \
-	fi; \
-	list='$(SUBDIRS)'; for subdir in $$list; do \
-	  if test "$$subdir" = .; then :; else \
-	    test ! -f $$subdir/TAGS || \
-	      set "$$@" "$$include_option=$$here/$$subdir/TAGS"; \
-	  fi; \
-	done; \
 	list='$(SOURCES) $(HEADERS)  $(LISP) $(TAGS_FILES)'; \
 	unique=`for i in $$list; do \
 	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
@@ -652,7 +512,7 @@ TAGS: tags-recursive $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
 	  fi; \
 	fi
 ctags: CTAGS
-CTAGS: ctags-recursive $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
+CTAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
 		$(TAGS_FILES) $(LISP)
 	list='$(SOURCES) $(HEADERS)  $(LISP) $(TAGS_FILES)'; \
 	unique=`for i in $$list; do \
@@ -794,52 +654,23 @@ distdir: $(DISTFILES)
 	    || exit 1; \
 	  fi; \
 	done
-	@list='$(DIST_SUBDIRS)'; for subdir in $$list; do \
-	  if test "$$subdir" = .; then :; else \
-	    test -d "$(distdir)/$$subdir" \
-	    || $(MKDIR_P) "$(distdir)/$$subdir" \
-	    || exit 1; \
-	  fi; \
-	done
-	@list='$(DIST_SUBDIRS)'; for subdir in $$list; do \
-	  if test "$$subdir" = .; then :; else \
-	    dir1=$$subdir; dir2="$(distdir)/$$subdir"; \
-	    $(am__relativize); \
-	    new_distdir=$$reldir; \
-	    dir1=$$subdir; dir2="$(top_distdir)"; \
-	    $(am__relativize); \
-	    new_top_distdir=$$reldir; \
-	    echo " (cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) top_distdir="$$new_top_distdir" distdir="$$new_distdir" \\"; \
-	    echo "     am__remove_distdir=: am__skip_length_check=: am__skip_mode_fix=: distdir)"; \
-	    ($(am__cd) $$subdir && \
-	      $(MAKE) $(AM_MAKEFLAGS) \
-	        top_distdir="$$new_top_distdir" \
-	        distdir="$$new_distdir" \
-		am__remove_distdir=: \
-		am__skip_length_check=: \
-		am__skip_mode_fix=: \
-	        distdir) \
-	      || exit 1; \
-	  fi; \
-	done
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-TESTS
-check: check-recursive
+check: check-am
 all-am: Makefile $(LTLIBRARIES) $(PROGRAMS) $(HEADERS)
-installdirs: installdirs-recursive
-installdirs-am:
-	for dir in "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libclidir)"; do \
+installdirs:
+	for dir in "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libmsgdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
-install: install-recursive
-install-exec: install-exec-recursive
-install-data: install-data-recursive
-uninstall: uninstall-recursive
+install: install-am
+install-exec: install-exec-am
+install-data: install-data-am
+uninstall: uninstall-am
 
 install-am: all-am
 	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
 
-installcheck: installcheck-recursive
+installcheck: installcheck-am
 install-strip:
 	$(MAKE) $(AM_MAKEFLAGS) INSTALL_PROGRAM="$(INSTALL_STRIP_PROGRAM)" \
 	  install_sh_PROGRAM="$(INSTALL_STRIP_PROGRAM)" INSTALL_STRIP_FLAG=-s \
@@ -856,96 +687,94 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-clean: clean-recursive
+clean: clean-am
 
 clean-am: clean-generic clean-libexecPROGRAMS clean-libtool \
 	clean-noinstLTLIBRARIES mostlyclean-am
 
-distclean: distclean-recursive
+distclean: distclean-am
 	-rm -rf ./$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
 
-dvi: dvi-recursive
+dvi: dvi-am
 
 dvi-am:
 
-html: html-recursive
+html: html-am
 
 html-am:
 
-info: info-recursive
+info: info-am
 
 info-am:
 
-install-data-am: install-libcliHEADERS
+install-data-am: install-libmsgHEADERS
 
-install-dvi: install-dvi-recursive
+install-dvi: install-dvi-am
 
 install-dvi-am:
 
 install-exec-am: install-libexecPROGRAMS
 
-install-html: install-html-recursive
+install-html: install-html-am
 
 install-html-am:
 
-install-info: install-info-recursive
+install-info: install-info-am
 
 install-info-am:
 
 install-man:
 
-install-pdf: install-pdf-recursive
+install-pdf: install-pdf-am
 
 install-pdf-am:
 
-install-ps: install-ps-recursive
+install-ps: install-ps-am
 
 install-ps-am:
 
 installcheck-am:
 
-maintainer-clean: maintainer-clean-recursive
+maintainer-clean: maintainer-clean-am
 	-rm -rf ./$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
-mostlyclean: mostlyclean-recursive
+mostlyclean: mostlyclean-am
 
 mostlyclean-am: mostlyclean-compile mostlyclean-generic \
 	mostlyclean-libtool
 
-pdf: pdf-recursive
+pdf: pdf-am
 
 pdf-am:
 
-ps: ps-recursive
+ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-libcliHEADERS uninstall-libexecPROGRAMS
+uninstall-am: uninstall-libexecPROGRAMS uninstall-libmsgHEADERS
 
-.MAKE: $(RECURSIVE_CLEAN_TARGETS) $(RECURSIVE_TARGETS) check-am \
-	ctags-recursive install-am install-strip tags-recursive
+.MAKE: check-am install-am install-strip
 
-.PHONY: $(RECURSIVE_CLEAN_TARGETS) $(RECURSIVE_TARGETS) CTAGS GTAGS \
-	all all-am check check-TESTS check-am clean clean-generic \
-	clean-libexecPROGRAMS clean-libtool clean-noinstLTLIBRARIES \
-	ctags ctags-recursive distclean distclean-compile \
+.PHONY: CTAGS GTAGS all all-am check check-TESTS check-am clean \
+	clean-generic clean-libexecPROGRAMS clean-libtool \
+	clean-noinstLTLIBRARIES ctags distclean distclean-compile \
 	distclean-generic distclean-libtool distclean-tags distdir dvi \
 	dvi-am html html-am info info-am install install-am \
 	install-data install-data-am install-dvi install-dvi-am \
 	install-exec install-exec-am install-html install-html-am \
-	install-info install-info-am install-libcliHEADERS \
-	install-libexecPROGRAMS install-man install-pdf install-pdf-am \
+	install-info install-info-am install-libexecPROGRAMS \
+	install-libmsgHEADERS install-man install-pdf install-pdf-am \
 	install-ps install-ps-am install-strip installcheck \
-	installcheck-am installdirs installdirs-am maintainer-clean \
+	installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	tags tags-recursive uninstall uninstall-am \
-	uninstall-libcliHEADERS uninstall-libexecPROGRAMS
+	tags uninstall uninstall-am uninstall-libexecPROGRAMS \
+	uninstall-libmsgHEADERS
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
