--- a/liquidwar6/data/srv/Makefile.am
+++ b/liquidwar6/data/srv/Makefile.am
@@ -18,5 +18,5 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-SUBDIRS = httpd
+SUBDIRS = tcpd udpd httpd
 
