--- a/liquidwar6/data/srv/Makefile.in
+++ b/liquidwar6/data/srv/Makefile.in
@@ -304,7 +304,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = httpd
+SUBDIRS = tcpd udpd httpd
 all: all-recursive
 
 .SUFFIXES:
