--- a/liquidwar6/src/lib/srv/mod-tcpd/Makefile.in
+++ b/liquidwar6/src/lib/srv/mod-tcpd/Makefile.in
@@ -98,12 +98,12 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(libmod_tcpddir)"
 LTLIBRARIES = $(lib_LTLIBRARIES) $(noinst_LTLIBRARIES)
 libmod_tcpd_la_LIBADD =
-am__libmod_tcpd_la_SOURCES_DIST = mod-tcpd-backend.c \
+am__libmod_tcpd_la_SOURCES_DIST = mod-tcpd-backend.c mod-tcpd-data.c \
 	mod-tcpd-handshake.c mod-tcpd-info.c mod-tcpd-message.c \
 	mod-tcpd-oob.c mod-tcpd-setup.c mod-tcpd-state.c
-am__objects_1 = mod-tcpd-backend.lo mod-tcpd-handshake.lo \
-	mod-tcpd-info.lo mod-tcpd-message.lo mod-tcpd-oob.lo \
-	mod-tcpd-setup.lo mod-tcpd-state.lo
+am__objects_1 = mod-tcpd-backend.lo mod-tcpd-data.lo \
+	mod-tcpd-handshake.lo mod-tcpd-info.lo mod-tcpd-message.lo \
+	mod-tcpd-oob.lo mod-tcpd-setup.lo mod-tcpd-state.lo
 @ALLINONE_FALSE@am_libmod_tcpd_la_OBJECTS = $(am__objects_1)
 libmod_tcpd_la_OBJECTS = $(am_libmod_tcpd_la_OBJECTS)
 libmod_tcpd_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
@@ -327,7 +327,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libmod_tcpd_s.la
-MOD_TCPD_FILES = mod-tcpd-backend.c mod-tcpd-handshake.c mod-tcpd-info.c mod-tcpd-message.c mod-tcpd-oob.c mod-tcpd-setup.c mod-tcpd-state.c
+MOD_TCPD_FILES = mod-tcpd-backend.c mod-tcpd-data.c mod-tcpd-handshake.c mod-tcpd-info.c mod-tcpd-message.c mod-tcpd-oob.c mod-tcpd-setup.c mod-tcpd-state.c
 libmod_tcpd_s_la_SOURCES = $(MOD_TCPD_FILES) 
 @ALLINONE_FALSE@lib_LTLIBRARIES = libmod_tcpd.la
 @ALLINONE_FALSE@libmod_tcpd_la_SOURCES = $(MOD_TCPD_FILES) 
@@ -421,6 +421,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-tcpd-backend.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-tcpd-data.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-tcpd-handshake.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-tcpd-info.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-tcpd-message.Plo@am__quote@
